Fix alignment issue with drink liquid

--- a/style.css
+++ b/style.css
@@ -352,9 +352,6 @@
     box-sizing: border-box;
     border-bottom-right-radius: 10%;
     border-bottom-left-radius: 10%;
-    position: relative;
-    display: flex;
-    justify-content: center;
 }
 
 .alice-drink-bottom-liquid {
@@ -365,6 +362,8 @@
     border-bottom-left-radius: 10%;
     bottom: 0px;
     position: relative;
+    left: 10px;
+    top: -65px;
 }
 
 .alice-drink-bottom-liquid-bubble-large {
@@ -391,7 +390,7 @@
     background-color: white;
     width: 3px;
     height: 60px;
-    position: absolute;
+    position: relative;
     z-index: 10;
     top: -90px;
     left: 5px;
@@ -401,9 +400,9 @@
     background-color: white;
     width: 40px;
     height: 3px;
-    position: absolute;
+    position: relative;
     z-index: 10;
-    top: -60px;
+    top: -110px;
     left: -15px;
 }
 
@@ -417,7 +416,6 @@
     top: -63px;
     left: 1px;
 }
-
 
 /* Original Code */
 
